Bug 977950.  Fix dragging of text to work again.  r=smaug